--- a/apps/spa-react/package.json
+++ b/apps/spa-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@single-spa/spa-react",
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack serve --port 8080",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently yarn:build:*",
     "build:webpack": "webpack --mode=production",
